# Learn-CMake

./: .gitignore
Step1/: CMakeLists.txt
Step2/: CMakeLists.txt
Step2/MathFunctions/: mysqrt.cxx
protocolt/: CMakeLists.txt  demo.cpp
protocolt/pbb/: news.pb.cc  news.pb.h  news.proto
